--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "memory-vault",
   "version": "1.0.0",
   "description": "Digital wisdom preservation system",
-  "main": "server.js",
+  "main": "backend/server.js",
   "engines": {
     "node": "20.x"
   },
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node backend/server.js",
+    "dev": "nodemon backend/server.js"
   },
   "keywords": [
     "memory",
@@ -23,6 +23,7 @@
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.19.1",
     "pg": "^8.13.1"
   },
   "devDependencies": {
